src/tests/krate/publish/snapshots/all__krate__publish__readme__new_krate_with_readme_and_plus_version.snap
---
source: src/tests/krate/publish/readme.rs
expression: response.into_json()
---
{
  "crate": {
    "badges": null,
    "categories": null,
    "created_at": "[datetime]",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_readme",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_readme/owner_team",
      "owner_user": "/api/v1/crates/foo_readme/owner_user",
      "owners": "/api/v1/crates/foo_readme/owners",
      "reverse_dependencies": "/api/v1/crates/foo_readme/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_readme/downloads",
      "versions": "/api/v1/crates/foo_readme/versions"
    },
    "max_stable_version": "1.0.0+foo",
    "max_version": "1.0.0+foo",
    "name": "foo_readme",
    "newest_version": "1.0.0+foo",
    "recent_downloads": null,
    "repository": null,
    "updated_at": "[datetime]",
    "versions": null
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
